--- a/index.html
+++ b/index.html
@@ -10,65 +10,29 @@
 <meta name="description" content="Wufoo is an online HTML form builder that helps anyone create beautiful contact forms, online surveys and event registrations without writing a single line of code.">
 <meta name="keywords" content="wufoo, html form, web form, form builder, contact form, online survey, payment form, event registration, online invitation, mailing list, online poll">
 
-
-<!-- CSS -->
-<link href="./login/index.0161.css" rel="stylesheet">
-<link href="./login/index.0160.css" rel="stylesheet">
-
 </head>
 
 <body id="public" class="gallery blue">
 
 <div id="overlay"></div>
 
-<div id="lightbox" class="done" style="margin-top: -239px; margin-left: -411px; visibility: none;">
-<div id="lbContent" class="clearfix">
 
-	<form id="loginForm" name="f" action="./Wufoo · Login_files/Wufoo · Login.htm" method="post">
-		<div class="info">
-		<h2>Login to Project portal</h2>
-		<div>try this</div>
-		</div>
-
-		<ul>
-			<li>
-				<div>
-					<label class="desc" for="emailLogin">Email Address</label>
-					<input id="emailLogin" name="emailLogin" class="field text large" type="text" value="">
-				</div>
-							</li>
-
-			<li>
-				<div>
-					<label class="desc" for="passwordLogin">Password</label>
-					<input id="passwordLogin" name="passwordLogin" class="field text large" type="password" value="">
-				</div>
-							</li>
-			<li>
-				<span>
-					<input id="remember" name="remember" class="checkbox field" type="checkbox" value="1">
-					<label class="choice" for="remember">Remember me.</label>
-				</span>
-			</li>
-			<li>
-				<button type="submit" id="saveForm" class="button">
-					<img src="./login/door_in.png" alt=""> Login</button>
-				<a href="https://secure.wufoo.com/gallery/templates/" class="negative button">
-					<img src="./login/cross.png" alt=""> Cancel</a>
-			</li>
-			<input type="hidden" name="signup" id="signup" value="2">
-		</ul>
-
-		<br>
-
-		
-	</form>
-
+	<form action="/my-handling-form-page" method="post">
+    <div>
+        <label for="name">Name:</label>
+        <input type="text" id="name" />
+    </div>
+    <div>
+        <label for="mail">E-mail:</label>
+        <input type="email" id="mail" />
+    </div>
+    <div>
+        <label for="msg">Message:</label>
+        <textarea id="msg"></textarea>
+    </div>
+</form>
 	
 
-
-</div>
-</div>
 
 <!-- JavaScript -->
 <script type="text/javascript" async="" src="./Wufoo · Login_files/ga.js"></script><script src="./Wufoo · Login_files/dynamic-1-7.0161.js"></script>
